# Shipectral

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  Rakefile.rb  imgui.ini  shard.yml
.github/workflows/: build_windows.yml
Shidacea/core/: ActionShape.rb  BaseGame.rb  CustomTile.rb  Data.rb  Entity.rb  Event.rb  Limiter.rb  MainLoop.rb  Map.rb  MapConfig.rb  Scene.rb  SpecialContainer.rb  Text.rb
configs/: example_sfml_test.json  example_test.json  launshi.json  launshi_debug.json  launshi_rl.json  launshi_rl_debug.json  launshi_sdl.json  launshi_sdl_debug.json  launshi_sfml.json  launshi_sfml_debug.json  raw.json
engine/: Engine.cr  EngineImGui.cr  EngineRL.cr  EngineSDL.cr  EngineSFML.cr
shidacea/: scripts.json
src/: AI.cr  CompatibilityLayer.rb  CompilationHelper.cr  Constants.cr  CustomTile.cr  GetConfigOption.cr  GetProjectScripts.cr  Input.cr  Limiter.cr  MapConfig.cr  SDCExtensions.rb  SDCLib.cr  SPTLib.cr  Scene.cr  Script.cr  ScriptHelper.cr  Shipectral.cr
test/: RawTest.rb  RawTestCrystal.cr  Test.rb
utility/: Compile_SFML_Windows.bat  Compile_Shipectral_Windows.bat  compile_SFML.bat  compile_SFML.sh  compile_Shipectral.bat  compile_Shipectral.sh  compile_Shipectral_RL.bat  compile_Shipectral_SDL.bat  compile_Shipectral_SFML.bat  compile_Shipectral_raw.bat  compile_Shipectral_without_SFML.bat  compile_Shipectral_without_SFML.sh  compile_anyolite.bat  compile_crSFML.bat  compile_crimgui.bat  config_anyolite.json  config_anyolite_raw.json  mrb_config_shipectral.rb  mrb_config_shipectral_raw.rb  rake_helper.rb  run_Shipectral.sh
(+236 files in other folders)
